src/main/java/com/example/error/BookMissingDetailsException.java
package com.example.error;

public class BookMissingDetailsException extends RuntimeException {
}
